network-policies/all-open.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-open
  namespace: kn-demo 
  labels:
    app: dumpy 
spec:
  podSelector: {}
  ingress:
  - {}
