network-policies/allowIngressToAppInSMMR.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: APPNAME
  namespace: NAMESPACE
  labels:
    app: APPNAME 
spec:
  podSelector:
    matchLabels:
      app: APPNAME
  ingress:
  - {}
