network-policies/dumpy-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dumpy 
  namespace: kn-demo 
  labels:
    app: dumpy 
spec:
  podSelector:
    matchLabels:
      app: dumpy 
  ingress:
  - {}
